src/css/popup/bookmark-item.css
@import "../common/mixins.css";
@import "../common/variables.css";

.main {
  align-items: center;
  box-sizing: border-box;
  composes: list-item from "../common/composes.css";
  display: flex;
  height: 100%;
  padding: var(--golden-gap) 0 var(--golden-gap) var(--golden-gap);

  &.root-folder {
    color: inherit !important;
  }

  &.selected {
    @apply --highlight-list-item;
  }

  &.separator {
    color: var(--highlight-level4);

    & > .title {
      text-overflow: clip;
    }
  }

  &.unclickable {
    @apply --grey-list-item;
  }
}

.icon {
  margin-right: var(--golden-gap-2x);
}

.title {
  composes: no-text-overflow from "../common/composes.css";
}

